package com.jambit.onboarding2020.tbrpg.games.quizGame.quizzes;

import com.jambit.onboarding2020.tbrpg.games.quizGame.Quiz;

public class Quiz_01 extends Quiz  {

    public Quiz_01(){
        wrongAnswer1 = 5;
        wrongAnswer2 = 7;
        correctAnswer = 9;
        question = "In einem Teich wächst eine Seerose, die sich schnell vermehren kann. " +
                "\nJeden Tag verdoppelt sie sich, und nach zehn Tagen ist der Teich voll. " +
                "\nu̶n̶d̶ l̶o̶c̶k̶t̶ l̶e̶c̶k̶e̶r̶e̶ K̶i̶n̶d̶e̶r̶ z̶u̶m̶ s̶p̶i̶e̶l̶e̶n̶ a̶n̶" +
                "\nWie viele Tage würde es dauern, wenn es am Anfang zwei Seerosen gäbe?.";
    }

}
