package com.jambit.onboarding2020.tbrpg.games.quizGame.quizzes;

import com.jambit.onboarding2020.tbrpg.games.quizGame.Quiz;

public class Quiz_02 extends Quiz implements Quizzzable  {

    public Quiz_02(){
        wrongAnswer1 = 15;
        wrongAnswer2 = 10;
        correctAnswer = 5;
        question = " Eine Flasche ̶K̶i̶n̶d̶e̶r̶b̶l̶u̶t̶... Eine Flasche Wein kostet mit Korken 110 SpaceDollar. " +
                "\nDie Flasche allein kostet schon 100 SpaceDollar mehr als der Korken. " +
                "\nWie viel kostet der Korken?";
    }

}

