package com.jambit.onboarding2020.tbrpg.games.quizGame.quizzes;

import com.jambit.onboarding2020.tbrpg.games.quizGame.Quiz;

public class Quiz_04 extends Quiz implements Quizzzable {


    public Quiz_04() {
        wrongAnswer1 = 30;
        wrongAnswer2 = 45;
        correctAnswer = 35;
        question = "Theo ist  ̶l̶e̶c̶k̶e̶r̶e̶ 13 Jahre alt. \n" +
                "In drei Jahren ist sein Großvater doppelt so alt wie Theos Vater \n" +
                "und in sieben Jahren ist der Großvater viermal so alt wie Theo. Wie alt ist der Vater von Theo?";
    }
}
