package com.jambit.onboarding2020.tbrpg.games.quizGame.quizzes;

import com.jambit.onboarding2020.tbrpg.games.quizGame.Quiz;

public class Quiz_05 extends Quiz implements Quizzzable {

     public Quiz_05(){
        wrongAnswer1 = 2;
        wrongAnswer2 = 11;
        correctAnswer = 3;
        question = "In einem Schrank liegen zehn weiße und zehn schwarze M̶e̶s̶s̶e̶r̶ ...Socken. \n" +
        "Wie viel Socken muss man in einer dunklen Nacht maximal herausholen, um ein gleichfarbiges Paar zu bekommen?\n" +
        "d̶a̶m̶i̶t̶ m̶a̶n̶ a̶u̶f̶ d̶i̶e̶ J̶a̶g̶d̶ g̶e̶h̶e̶n̶ k̶a̶n̶n̶";
    }
}
