package com.jambit.onboarding2020.tbrpg.games.quizGame.quizzes;

import com.jambit.onboarding2020.tbrpg.games.quizGame.Quiz;

public class Quiz_06 extends Quiz implements Quizzzable  {

    public Quiz_06(){
        wrongAnswer1 = 45;
        wrongAnswer2 = 60;
        correctAnswer = 30;
        question = "Ich zeige dir meine Hände. Es sind sechs l̶a̶n̶g̶e̶ b̶l̶e̶i̶c̶h̶e̶ Finger.\n" +
                   "Wie viele Finger haben zehn Hände?";
    }


}
