package com.jambit.onboarding2020.tbrpg.games.quizGame.quizzes;

import com.jambit.onboarding2020.tbrpg.games.quizGame.Quiz;

public class Quiz_07 extends Quiz implements Quizzzable {

    public Quiz_07() {
        wrongAnswer1 = 100000;
        wrongAnswer2 = 10000;
        correctAnswer = 1000;
        question = "E̶i̶n̶e̶ S̶c̶h̶u̶p̶p̶e̶  ...ein menschliches Haar wächst im Monat etwa um einen Zentimeter. \n" +
                "Menschen haben um die 100.000 Haare am Kopf. \n" +
                "Wie viele Meter Haar wächst in einem Monat am Kopf?";


    }
}
