package com.jambit.onboarding2020.tbrpg.games.quizGame.quizzes;

import com.jambit.onboarding2020.tbrpg.games.quizGame.Quiz;

public class Quiz_08 extends Quiz implements Quizzzable {

    public Quiz_08() {
        wrongAnswer1 = 7600;
        wrongAnswer2 = 9200;
        correctAnswer = 8400;
        question = "Das Buch 1̶0̶0̶0̶0̶ W̶e̶g̶e̶ e̶i̶n̶ K̶i̶n̶d̶ z̶u̶z̶u̶b̶e̶r̶e̶i̶t̶e̶n̶..." +
                "\"Brockhaus\" besteht aus 24 Bänden.\n" +
                "Jeder Band hat 700 Seiten. Das Werk enthält 260.000 Stichworte und 35.000 Abbildungen. \n" +
                "Ein Band ist 5,7 Zentimeter dick. Die Buchdeckel sind jeweils zwei Millimeter stark.\n" +
                "Wie viele Blätter hat das Gesamtwerk?";

    }

}
