package com.jambit.onboarding2020.tbrpg.games.quizGame.quizzes;

import com.jambit.onboarding2020.tbrpg.games.quizGame.Quiz;

public class Quiz_09 extends Quiz implements Quizzzable {

    public Quiz_09() {
        wrongAnswer1 = 24;
        wrongAnswer2 = 7;
        correctAnswer = 8;
        question = "Ein Freund möchte in eine befestigte Stadt eindringen u̶m̶ d̶o̶r̶t̶ d̶i̶e̶ K̶i̶n̶d̶e̶r̶ z̶u̶ h̶o̶l̶e̶n̶"+
        "\naber er weiß die Parole für die Stadtwache nicht. Vor ihm tritt jemand an das Tor," +
        "\nwird von der Wache mit >>28<< angesprochen und antwortet >>14<<." +
        "\nDer Nächste antwortet auf >>8<< mit >>4<<." +
        "\nNun tritt unser Freund an das Tor. Was muss er auf >>14<< antworten?";

    }

}

